--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="projects.html">Projects</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="workexperience.html">Work Experience</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="more.htmltml">More</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="more.html">More</a></li>
                     </ul>
                 </div>
             </div>
@@ -64,7 +64,7 @@
               <h2>              <a
                   href="https://docs.google.com/document/d/1UKGxub_1nJQ8II9QajPBTZ2Ow6615b0lGOHCpiMDIq4/edit">Entrepreneurship Project - Project Recycle (POE)</a></h2>
               <h3>5/4/22 - 5/18/22</h3>
-              <img src="assets/img/ent.png" style="width:250px;" ALIGN="left" HSPACE=20px; />
+              <img src="assets/img/ent.png" style="width:250px;" ALIGN="right" HSPACE=20px; />
               <p ALIGN="left"> The 2022 Entrepreneurship Project is a major project done by all of the engineering and
                 CS students at DHS. This year, I worked with Anwesha, Prathik, and Yougi to develop a trash can that
                 automatically sorts trash using a variety of sensors, an arduino nano, and a servo arm. Since we could
