--- a/workexperience.html
+++ b/workexperience.html
@@ -30,14 +30,13 @@
         Menu
         <i class="fas fa-bars"></i>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ms-auto py-4 py-lg-0">
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="projects.html">Projects</a></li>
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="workexperience.html">Work Experience</a>
-          </li>
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="more.htmltml">More</a></li>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto py-4 py-lg-0">
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="projects.html">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="workexperience.html">Work Experience</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="more.html">More</a></li>
         </ul>
       </div>
     </div>
@@ -70,7 +69,7 @@
               </h4>
               <img src="assets/img/lindsay.png" alt="profile photo" style="width:300px;" ALIGN="right" HSPACE=15px; />
               <p>I have been an OWL, or Outstanding Wildlife Leader, since 2020. As an OWL, I have helped with public
-                education, animal husbandry, and professional handling for a variety of native wildlife from California.
+                education, animal husbandry, and data collection for a variety of native wildlife from California.
                 I volunteer at Lindsay wildlife every week and I help lead events for the public with a team of other
                 youth volunteers. I also help design curriculum that can be used to educate students about environmental
                 issues. I've also been looking at the intersection between technology and biology, specifically using
