--- a/more.html
+++ b/more.html
@@ -53,8 +53,11 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                      <h3>Coursera Specialization</h3>
-                        <p>Over the summer, I </p>
+                      <h4>Over the Summer...</h4>
+                        <p>I’m very passionate about the environment and the use of AI to help understand and address challenges facing the natural world. This year, as part of my volunteer internship at a local wildlife center, I have been doing a project to understand the spread of wildfires in California using data science.
+My weekly shifts involve handling and interpreting for reptiles, mammals and invertebrates through presentations, for which I needed to closely observe the habits of animals, collect data about their behavior, and also understand how changes in the local environment affect this behavior. This in turn led me to learn how geospatial data science can be used to understand both short and long-term changes in our environment, like how the spread and intensity of seasonal wildfires is related to tree death and in turn to longer-term drought. I have been learning how to use publicly available data from Calfire along with pandas, scikit-learn and streamlit to analyze wildfires and their effects on local ecosystems. I’ve recently begun learning how to use machine learning and deep learning to diagnose tree health from online satellite imagery. I am currently doing a Coursera specialization on ML with Python and Tensorflow, and I plan to complete a Deep Learning specialization to develop my skills further. 
+</p>
+                 <img src="assets/img/certificate.jpg" style="width:500px;" HSPACE=20px; />
                     </div>
                 </div>
             </div>
