--- a/workexperience.html
+++ b/workexperience.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>Clean Blog - Start Bootstrap Theme</title>
+  <title>Career Exploration</title>
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -30,13 +30,14 @@
         Menu
         <i class="fas fa-bars"></i>
       </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="projects.html">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="workexperience.html">Work Experience</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="more.html">More</a></li>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ms-auto py-4 py-lg-0">
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="projects.html">Projects</a></li>
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="workexperience.html">Work Experience</a>
+          </li>
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="more.html">More</a></li>
         </ul>
       </div>
     </div>
@@ -48,7 +49,8 @@
         <div class="col-md-10 col-lg-8 col-xl-7">
           <div class="page-heading">
             <h1>Work Experience</h1>
-            <h2><a href="https://drive.google.com/file/d/1d1Ki8F85S0u81A1wp7C7rZAaKhyqLSHw/view?usp=sharing">Samiksha's Resume</a></h2>
+            <h2><a href="https://drive.google.com/file/d/1d1Ki8F85S0u81A1wp7C7rZAaKhyqLSHw/view?usp=sharing">Samiksha's
+                Resume</a></h2>
           </div>
         </div>
       </div>
@@ -194,7 +196,7 @@
             laser system. Scientists in NIF try to understand nuclear fusion and recreate processes that start to
             produce energy. Their primary objectives, according to Rendon, are to maintain a nuclear stock-pile, explore
             nuclear fusion and cleaner energy, and understand what our universe is made of.</p>
-            <p>Rendon went in depth about
+          <p>Rendon went in depth about
             the processes, describing how they take lasers and converge them into capsules to target a small, carefully
             engineered target. She made it clear that most of the time, they are collecting data and formulating the
             best scenarios with computers as opposed to testing because it is a complex process. Lasers are used to find
