--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>Clean Blog - Start Bootstrap Theme</title>
+  <title>Projects</title>
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -22,23 +22,25 @@
 
 <body>
   <!-- Navigation-->
-<nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
-            <div class="container px-4 px-lg-5">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="projects.html">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="workexperience.html">Work Experience</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="more.html">More</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+  <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
+    <div class="container px-4 px-lg-5">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ms-auto py-4 py-lg-0">
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="projects.html">Projects</a></li>
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="workexperience.html">Work Experience</a>
+          </li>
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="more.html">More</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <!-- Page Header-->
   <header class="masthead" style="background-image: url('assets/img/post-bg.jpg')">
     <div class="container position-relative px-4 px-lg-5">
@@ -61,31 +63,53 @@
         <div class="col-md-10 col-lg-8 col-xl-7">
           <main>
             <article>
-              <h2>              <a
-                  href="https://docs.google.com/document/d/1UKGxub_1nJQ8II9QajPBTZ2Ow6615b0lGOHCpiMDIq4/edit">Entrepreneurship Project - Project Recycle (POE)</a></h2>
+              <h2> <a
+                  href="https://docs.google.com/document/d/1w-hjhbYRJy2ChFHOTR5G11yVXFuLGRy1iuMAerbefhs/edit?usp=sharingProject">Project
+                  2.1.5 (Digital Electronics) </a></h2>
+              <h3>11/7/22 - 11/30/22</h3>
+             <h3> <a href="https://docs.google.com/document/d/16iuCUC4lvb9Iw49T0T8zpfcYg98oPeKLiOJ0L6NXm8U/edit"> Rubric </a></h3>
+              <img src="assets/img/P2.1.5Breadboard.png" style="width:450px;" HSPACE=100px; />
+              <p> Project 2.1.5 was focused on using AOI, or combinational, circuit logic to solve a multi-part real world problem. Part of the criteria was to have at least three individual circuits that could be integrated together to produce a main output. We were required to have at least 6 inputs and 3 smaller outputs that were integrated.</p>
+
+<p>For our problem, we decided to create an Amazon Drone Simulation system that allowed a user to move a drone in 3 dimensions: pitch, yaw, and roll. A change in movement in these dimensions would be determined by the difference in rotations per minute of a quadcopter’s motors and whether the drone had a load and was charged. 4 motor rpms and a load and charge button were the inputs, and based on different combinations of these values, the user would be able to see if pitch, yaw, or roll was changing at a given time. The integrated output was a color coded display that indicated what was changing every time the motor rpm changed.</p>
+
+<p>Since pitch, yaw, and roll could not change simultaneously, we wanted to implement a part of the system that would look at every three bits and display the sequence of pitch yaw and roll at a given time. We constructed a functioning simulation of it, however, when we implemented it on a breadboard, there were too many minor problems, so we decided to stick with our original idea for the sake of functionality and simplicity. Below is our final circuit simulation, color coded for each section. </p>
+          <img src="assets/img/P2.1.5Multisim.png" style="width:600px;" HSPACE=20px; />
+
+<p>During the project, I helped mainly with breadboarding and designing the integrated simulation. Since I was the only member who could access the circuit design system outside of class, I tested our ideas and ensured that my members’ components were functional as well. In terms of breadboarding, I helped with color coding and designing my individual portion, pitch. Anwesha and I came up with the integrated idea involving flip flops and I designed a functional multisim for it, although we could not actually implement it. I was also in charge of the labeled diagrams for documentation.</p>
+
+<p>As a team, Anwesha, Anisha, and I worked well together. There was constant communication between all of us and we met multiple times outside of class to ensure that our documentation and physical prototype was functional. We also came up with an idea we were all satisfied with and did our share during the project. Our idea was unique because with further development, it could actually be used for a physical drone control practice simulation. It could be applied because it was based on actual flight concepts and it was intended to work for a newer problem. </p> 
+
+              <h2> <a
+                  href="https://docs.google.com/document/d/1UKGxub_1nJQ8II9QajPBTZ2Ow6615b0lGOHCpiMDIq4/edit">Entrepreneurship
+                  Project - Project Recycle (Principles of Engineering)</a></h2>
               <h3>5/4/22 - 5/18/22</h3>
-              <img src="assets/img/ent.png" style="width:250px;" ALIGN="right" HSPACE=20px; />
+              <h3> <a  href="https://docs.google.com/document/d/117iznvpsjrzfovstdF51lDp_O8zikt1gFRpcMCdGjyA/edit">Rubric</a></h3>
+
+              <img src="assets/img/box.png" style="width:200px;" HSPACE=20px; />
+              <img src="assets/img/recycle.png" style="width:350px;" HSPACE=20px; />
               <p ALIGN="left"> The 2022 Entrepreneurship Project is a major project done by all of the engineering and
                 CS students at DHS. This year, I worked with Anwesha, Prathik, and Yougi to develop a trash can that
                 automatically sorts trash using a variety of sensors, an arduino nano, and a servo arm. Since we could
                 not acquire actual capacitive, inductive, or moisture sensors to detect plastic, we used a color sensor
                 for our prototype to communicate the placement of the sensors and how the overall mechanism would work.
-                I helped with the prototype, documentation, and presentation for this project.
-                For documentation, I assisted Anwesha in writing a solution summary that provided an in depth
+                I helped with the prototype, documentation, and presentation for this project.</p>
+                <p>For documentation, I assisted Anwesha in writing a solution summary that provided an in depth
                 description of our product. I focused on calculating the mechanical advantage of the simple machines and
                 describing their significance in our solution. Once Prathik gathered data about the prototype, I used
                 his findings to write a detailed analysis of our current iteration of the design. I also noted issues
                 that were found while testing and identified possible causes and solutions that could be implemented if
-                we had more time and resources.
-                In POE class, I worked with Anwesha to gather materials and build a physical prototype with cardboard
+                we had more time and resources. </p>
+              <p> In POE class, I worked with Anwesha to gather materials and build a physical prototype with cardboard
                 and tape. I focused on implementing simple machines to improve the product. This included an inclined
                 plane to send trash down and a “wheel and axle” servo arm. I also helped with planning out our code and
                 making the process efficient in terms of the soft-ware.
                 During the project, we wrestled with the issue of communication. One of our group members did not even
                 answer our messages or view the document until the last day, so the burden was placed on the other
-                members. Moreover, we were unable to set deadlines properly and actually meet them, which led us to cram
+                members. 
+                <p>Moreover, we were unable to set deadlines properly and actually meet them, which led us to cram
                 a lot of work into a few days. Although our prototype worked quite well, it could’ve been better if we
-                had stuck to a solid plan and our gantt chart. </p>
+                had stuck to a solid plan and our gantt chart.</p>
               <h4>
               </h4>
             </article>
@@ -93,21 +117,20 @@
           <main>
             <article>
               <h2><a
-                  href="https://docs.google.com/document/d/1mRxmm_BhpezMLXJ1M0Ju-q5ykehJTmUtYvy5ZsbBDLI/edit">Compound Machine Project (POE)</a></h2>
+                  href="https://docs.google.com/document/d/1mRxmm_BhpezMLXJ1M0Ju-q5ykehJTmUtYvy5ZsbBDLI/edit">Compound
+                  Machine Project (POE)</a></h2>
               <h3>9/17/2021 - 9/28/2021</h3>
-                           <h4><a
-                  href="https://docs.google.com/document/d/1hPm1KkmwZx0zbnMVp-gxjltpEgj8Rq52QtDualaWzhc/edit">Rubric</a></h4>
-              <img src="assets/img/compound.png" alt="profile photo" style="width:250px;" ALIGN="left"
-                HSPACE=15px; />
-              <img src="assets/img/compound2.png" alt="profile photo" style="width:250px;" ALIGN="left"
-                HSPACE=80px; />
+              <h4><a
+                  href="https://docs.google.com/document/d/1hPm1KkmwZx0zbnMVp-gxjltpEgj8Rq52QtDualaWzhc/edit">Rubric</a>
+              </h4>
+              <img src="assets/img/compoundmachine.png" alt="profile photo" style="width:600px;" ALIGN="center" HSPACE=50px; />
               <p>In this project, I worked with four other students to design a compound machine for the fictional
                 company, "Compound". We had to design a functional system that performed an every day task and included
                 at least 4 different types of simple machines. Through the engineering design process, we planned and
-                built a machine that stapled paper using a pulley, first class lever, wedge, and wheel and axle.
+                built a machine that stapled paper using a pulley, first class lever, wedge, and wheel and axle. In this project, I mainly focused on building and testing our design, but I also contributed
+                calculations of the mechanical advantage and documentation. 
               <p>
-              <p>In this project, I mainly focused on building and testing our design, but I also contributed
-                calculations of the mechanical advantage and documentation. Our group's machine was quite flimsy,
+              <p>Our group's machine was quite flimsy,
                 especially at the wedge aspect of our system, and we had limitations on materials and time, so this was
                 a major challenge. We overcame this issue by discussing solutions to our issues outside of building and
                 maximizing our in class work time. My group and I also struggled with making our machine function
@@ -121,15 +144,16 @@
 
           <main>
             <article>
-                        <h2><a
-            href="https://docs.google.com/document/d/1McYqR34z59bgIF2AyPr1gDUIWYfAB0pd5t90SOE2hg0/edit">    Entrepreneurship Project (IED)</a></h2>
+              <h2><a href="https://docs.google.com/document/d/1McYqR34z59bgIF2AyPr1gDUIWYfAB0pd5t90SOE2hg0/edit">
+                  Entrepreneurship Project (IED)</a></h2>
               <h3>5/3/2021 - 5/17/2021</h3>
-              <img src="assets/img/umbrella.png" alt="profile photo" style="width:250px;" ALIGN="right" HSPACE=15px; />
+              <img src="assets/img/umbrella.png" alt="profile photo" style="width:300px;" ALIGN="center" HSPACE=160px; />
               <p>In this project, my group and I had 3 weeks to develop a solution to a problem of our choice. Through a
                 design matrix and brainstorming, we decided to generate a solution to inconvenient umbrella designs that
                 made environments slippery. I was the Research Lead and Assistant who found evident flaws in current
                 umbrella designs and presented them to my group. Additionally, I assisted my members in CADing the new
-                umbrella in Autodesk and formally presenting it in a detailed video. My group and I faced issues with
+                umbrella in Autodesk and formally presenting it in a detailed video.</p>
+              <p> My group and I faced issues with
                 communication, since planning a project virtually was extremely difficult, and we had other commitments
                 at that time. I took initiative and solved this by distributing the work and creating a schedule for
                 meetings. Moreover, in order to ensure that our product was truly innovative, we contacted an
@@ -142,14 +166,18 @@
 
           <main>
             <article>
-              <h2>              <a
-                  href="https://docs.google.com/document/d/1Z0hEPkhW5hGuUIMIWljn3TK0vaJLI1uxmKGSarSiDk4/edit">Lawn Ornament Project (IED)</a></h2>
+              <h2> <a href="https://docs.google.com/document/d/1Z0hEPkhW5hGuUIMIWljn3TK0vaJLI1uxmKGSarSiDk4/edit">Lawn
+                  Ornament Project (IED)</a></h2>
               <h3>2/11/2021 - 2/22/2021</h3>
-              <img src="assets/img/deer.png" alt="profile photo" style="width:250px;" ALIGN="right" HSPACE=15px; />
-              <p>In this project, my partner and I were asked to design a visually appealing deer lawn ornament that would be easy for consumers to assemble and place in their front yards. There were weight and material
-                criteria that were crucial to follow for our project. It also had to withstand a 40 pound tipping force,which would be calculated using measurements from out Autodesk (CAD) prototype. My teammate and I
-                 decided to stick with a simple yet sturdy deer design that used flat wooden pieces that could be
-                inserted through fitted slits. After extensive research on local deer measurements and recyclable
+              <img src="assets/img/deer.png" alt="profile photo" style="width:400px;" ALIGN="center" HSPACE=140px; />
+              <p>In this project, my partner and I were asked to design a visually appealing deer lawn ornament that
+                would be easy for consumers to assemble and place in their front yards. There were weight and material
+                criteria that were crucial to follow for our project. It also had to withstand a 40 pound tipping
+                force,which would be calculated using measurements from out Autodesk (CAD) prototype. My teammate and I
+                decided to stick with a simple yet sturdy deer design that used flat wooden pieces that could be
+                inserted through fitted slits. </p>
+                
+                <p> After extensive research on local deer measurements and recyclable
                 materials, we applied our CAD knowledge to make a proportional deer. However, our deer was too flimsy
                 and small to withstand a 40 lb tipping force, so we repeated the design process multiple times to resize
                 it and utilize new materials. I helped draw initial designs, create multiple versions of the lawn
