--- a/more.html
+++ b/more.html
@@ -37,7 +37,7 @@
           <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="workexperience.html">Work Experience</a>
           </li>
           <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="more.html">More</a></li>
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="more.html">Other Projects</a></li>
         </ul>
       </div>
     </div>
@@ -60,13 +60,22 @@
     <div class="container px-4 px-lg-5">
       <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
-          <h4>Over the Summer...</h4>
+          <h3>Can Changes in Eye Appearance Be Used to Predict High Blood Pressure?</h3>
+          <h4> <a href="https://drive.google.com/file/d/1nVCwmL8KUQF20wo7nRzw_cL7pBPDh9FH/view?usp=sharing"> Abstract </a></h4> 
+            <p>     In January of 2023, I came up with a simple project idea to use what I had learned in my online courses. I entered my project in ACSEF (Alameda Country Science and Engineering Fair). My project was aimed at answering the motivating question: "Can Eye Appearance Be Used to Predict High Blood Pressure?". I combined some of the foundational deep learning knowledge I had picked up, as well as online resources, to answer this question. </p>
+            <p>I brought a prototype of my project to the fair, created in Google Colab. It was functional, but did not have accuracy or very promising results because it had been developed in such a short amount of time. I also collected a limited amount of data, but my model definitely showed visual classification in action.</p>
+                              <iframe src="assets/quad.pdf" height="30%" width="115%" scrolling="auto"></iframe>
+            <p>Although I didn't do perform well in the fair, I spoke to a lot of judges who gave me fantastic feedback about my prototype and offered to help me develop my idea further. </p>
+
+          <h3>Over the Summer...</h3>
           <p>I’m very passionate about the environment and the use of AI to help understand and address challenges
             facing the natural world. This year, as part of my volunteer internship at a local wildlife center, I have
             been doing a project to understand the spread of wildfires in California using data science.
             My weekly shifts involve handling and interpreting for reptiles, mammals and invertebrates through
             presentations, for which I needed to closely observe the habits of animals, collect data about their
-            behavior, and also understand how changes in the local environment affect this behavior. This in turn led me
+            behavior, and also understand how changes in the local environment affect this behavior. </p>
+
+<p>This in turn led me
             to learn how geospatial data science can be used to understand both short and long-term changes in our
             environment, like how the spread and intensity of seasonal wildfires is related to tree death and in turn to
             longer-term drought. I have been learning how to use publicly available data from Calfire along with pandas,
@@ -111,7 +120,6 @@
               </a>
             </li>
           </ul>
-          <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2022</div>
         </div>
       </div>
     </div>
