--- a/more.html
+++ b/more.html
@@ -35,21 +35,21 @@
           <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="projects.html">Projects</a></li>
           <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="workexperience.html">Work Experience</a>
+            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a>
           </li>
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
+
           <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="more.html">Other Projects</a></li>
         </ul>
       </div>
     </div>
   </nav>
   <!-- Page Header-->
-  <header class="masthead" style="background-image: url('assets/img/about-bg.jpg')">
+  <header class="masthead" style="background-image: url('assets/img/plant.png')">
     <div class="container position-relative px-4 px-lg-5">
       <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
           <div class="page-heading">
             <h1>What Else Have I Been Doing?</h1>
-            <span class="subheading">Some Personal Projects</span>
           </div>
         </div>
       </div>
@@ -57,17 +57,17 @@
   </header>
   <!-- Main Content-->
   <main class="mb-4">
+    <!--div class="container px-4 px-lg-5"-->
+      <!--div class="row gx-4 gx-lg-5 justify-content-center"-->
+        <!--div class="col-md-10 col-lg-8 col-xl-7"-->
     <div class="container px-4 px-lg-5">
-      <div class="row gx-4 gx-lg-5 justify-content-center">
-        <div class="col-md-10 col-lg-8 col-xl-7">
-          <h3>Can Changes in Eye Appearance Be Used to Predict High Blood Pressure?</h3>
-          <h4> <a href="https://drive.google.com/file/d/1nVCwmL8KUQF20wo7nRzw_cL7pBPDh9FH/view?usp=sharing"> Abstract </a></h4> 
-            <p>     In January of 2023, I came up with a simple project idea to use what I had learned in my online courses. I entered my project in ACSEF (Alameda Country Science and Engineering Fair). My project was aimed at answering the motivating question: "Can Eye Appearance Be Used to Predict High Blood Pressure?". I combined some of the foundational deep learning knowledge I had picked up, as well as online resources, to answer this question. </p>
-            <p>I brought a prototype of my project to the fair, created in Google Colab. It was functional, but did not have accuracy or very promising results because it had been developed in such a short amount of time. I also collected a limited amount of data, but my model definitely showed visual classification in action.</p>
-                              <iframe src="assets/quad.pdf" height="30%" width="115%" scrolling="auto"></iframe>
-            <p>Although I didn't do perform well in the fair, I spoke to a lot of judges who gave me fantastic feedback about my prototype and offered to help me develop my idea further. </p>
+          <h3> March 2023 - Can Changes in Eye Appearance Be Used to Predict High Blood Pressure?</h3>
+          <h4> <a href="https://drive.google.com/file/d/1nVCwmL8KUQF20wo7nRzw_cL7pBPDh9FH/view?usp=sharing"> Click Here for Abstract </a></h4> 
+            <p>     In January of 2023, I came up with a simple project idea to use what I had learned in my online courses. I entered my project in ACSEF (Alameda Country Science and Engineering Fair). My project was aimed at answering the motivating question: "Can Eye Appearance Be Used to Predict High Blood Pressure?". I combined some of the foundational deep learning knowledge I had picked up, as well as online resources, to answer this question. I brought a prototype of my project to the fair, created in Google Colab. It was functional, but did not have accuracy or very promising results because it had been developed in such a short amount of time. I also collected a limited amount of data, but my model definitely showed visual classification in action.</p>
+                <img src="assets/img/quadd.png" style="width:600px;" HSPACE=300px; />
+            <p>Although I didn't do perform well in the fair, I spoke to a lot of judges who gave me fantastic feedback about my prototype. I'm planning on getting more feedback and finding people who are interested in helping me improve this idea. </p>
 
-          <h3>Over the Summer...</h3>
+          <h3>Summer 2022 - Coursera Certification</h3>
           <p>I’m very passionate about the environment and the use of AI to help understand and address challenges
             facing the natural world. This year, as part of my volunteer internship at a local wildlife center, I have
             been doing a project to understand the spread of wildfires in California using data science.
@@ -84,46 +84,7 @@
             imagery. I am currently doing a Coursera specialization on ML with Python and Tensorflow, and I plan to
             complete a Deep Learning specialization to develop my skills further.
           </p>
-          <img src="assets/img/certificate.jpg" style="width:500px;" HSPACE=20px; />
-        </div>
-      </div>
-    </div>
-  </main>
-  <!-- Footer-->
-  <footer class="border-top">
-    <div class="container px-4 px-lg-5">
-      <div class="row gx-4 gx-lg-5 justify-content-center">
-        <div class="col-md-10 col-lg-8 col-xl-7">
-          <ul class="list-inline text-center">
-            <li class="list-inline-item">
-              <a href="#!">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#!">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#!">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </footer>
+          <img src="assets/img/certificate.jpg" style="width:500px;" HSPACE=300px;/>
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Core theme JS-->
