--- a/more.html
+++ b/more.html
@@ -38,7 +38,7 @@
             <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a>
           </li>
 
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="more.html">Other Projects</a></li>
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="more.html">Personal Projects</a></li>
         </ul>
       </div>
     </div>
@@ -61,11 +61,16 @@
       <!--div class="row gx-4 gx-lg-5 justify-content-center"-->
         <!--div class="col-md-10 col-lg-8 col-xl-7"-->
     <div class="container px-4 px-lg-5">
+      <h3> July 2023 - Advanced Algorithms Certification & Pulsar Detection Certification </h3>
+            <p> This summer, I completed the second part of the Deep Learning Specialization, Advanced Learning Algorithms. In this part of the course, I learned about neural networks, decision trees, and the ethics of AI. For the final project of the course, I created a neural network that could assess whether a mushroom is poisonous or not based on an image. This part of the course was fascinating to me because of my ACSEF project. Since I had already used a neural network and followed a methodical data collection process, it was interesting to learn that 80% of machine learning is data collection and preparation. </p>
+                <img src="assets/img/cert.png" style="width:400px;" HSPACE=300px; />
+            <p> In addition to the course, I also completed a 6-week Certification Workshop offered by the PSC. Suprisingly, I discovered it in a news article I was reading, and found out it was focused on learning how to detect pulsars. Now, I am able to analyze radio telescope data and understand whether a set of radio pulses are from a pulsar or RFI. After I completed the course, I was invited to join the Advanced Timing Research Team to study pulsar timing and how it relates to gravitational waves. (Sample data below) </p>
+      <img src="assets/img/pulsar1.png" style="width:500px;" HSPACE=300px; />
           <h3> March 2023 - Can Changes in Eye Appearance Be Used to Predict High Blood Pressure?</h3>
           <h4> <a href="https://drive.google.com/file/d/1nVCwmL8KUQF20wo7nRzw_cL7pBPDh9FH/view?usp=sharing"> Click Here for Abstract </a></h4> 
-            <p>     In January of 2023, I came up with a simple project idea to use what I had learned in my online courses. I entered my project in ACSEF (Alameda Country Science and Engineering Fair). My project was aimed at answering the motivating question: "Can Eye Appearance Be Used to Predict High Blood Pressure?". I combined some of the foundational deep learning knowledge I had picked up, as well as online resources, to answer this question. I brought a prototype of my project to the fair, created in Google Colab. It was functional, but did not have accuracy or very promising results because it had been developed in such a short amount of time. I also collected a limited amount of data, but my model definitely showed visual classification in action.</p>
+            <p>     In January of 2023, I came up with a project idea to apply what I had learned in my online courses. I entered my project in ACSEF (Alameda Country Science and Engineering Fair) and recieved the 3rd Place Category Award. My project was aimed at answering the driving question: "Can Eye Appearance Be Used to Predict High Blood Pressure?". I used iPhone photos, Google Colab, neural networks, and the Fast.Ai visual classification library to answer this question. Although my project had been developed in a short span of time, it could classify eye images as high or low blood pressure based on specific features. I trained my model with over 60 images and blood pressure readings collected from my father, and it was beginning to show promising results. </p>
                 <img src="assets/img/quadd.png" style="width:600px;" HSPACE=300px; />
-            <p>Although I didn't do perform well in the fair, I spoke to a lot of judges who gave me fantastic feedback about my prototype. I'm planning on getting more feedback and finding people who are interested in helping me improve this idea. </p>
+            <p>I spoke to a lot of judges who gave me fantastic feedback about my prototype. I'm planning on getting more feedback and finding people who are interested in helping me improve this idea. </p>
 
           <h3>Summer 2022 - Coursera Certification</h3>
           <p>I’m very passionate about the environment and the use of AI to help understand and address challenges
