--- a/workexperience.html
+++ b/workexperience.html
@@ -38,7 +38,7 @@
             
           </li>
           <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a>
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="more.html">Other Projects</a></li>
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="more.html">Personal Projects</a></li>
         </ul>
       </div>
     </div>
