--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ms-auto py-4 py-lg-0">
           <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="projects.html">Projects</a></li>
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="workexperience.html">Work Experience</a>
-            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a>
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="projects.html">Academic Projects</a></li>
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="more.html">Personal Projects</a>
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="workexperience.html">Career Exploration</a>
           </li>
 
-          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="more.html">Personal Projects</a></li>
+          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -63,11 +63,12 @@
           <a>
             <h1>About Me</h1>
               <img src="assets/img/profile.png" style="width:300px;" ALIGN="right" HSPACE = 20px; />
-            <p> Hi! I’m Samiksha, a junior in Dublin High School’s Engineering Academy. Throughout my childhood, I have always spent time in nature and explored local ecosystems and observed environmental issues. I would always wonder what I could do to track and generate solutions to these issues, considering that picking up trash and using less plastic could only do so much. Recently, I have discovered the immense capabilities of computer science and engineering in helping the environment. My goal as a DEDA student is to apply my knowledge to problems closer to home like figuring out how to protect local ecosystems and studying extreme climates through remote sensing.
+            <p> Hi! I’m Samiksha, a senior in Dublin High School’s Engineering Academy. Throughout my childhood, I have always spent time in nature and explored local ecosystems and observed environmental issues. I would always wonder what I could do to track and generate solutions to these issues, considering that picking up trash and using less plastic could only do so much. Recently, I have discovered the immense capabilities of computer science and engineering in helping the environment. My goal as a DEDA student is to apply my knowledge to problems closer to home like figuring out how to protect local ecosystems and studying extreme climates through remote sensing.
 
 </p>
-                     <p> Currently, I am taking courses that have explored engineering from an exploration and specialization perspective. My first two courses, Intro to Engineering Design and Principles of Engineering were interdisciplinary courses that looked at several different areas, from mechanical to electrical engineering. This year, I am in a specialization course, Digital Electronics, where I specifically study digital systems and logic. I have also been taking computer science courses in my free time to expand my skill set and truly figure out what I'm interested in. These past years in high school have mainly been about exploration because I am fascinated by many areas of engineering and computer science. Over the past few months, I've definitely become more interested in chemical engineering, as well as electrical engineering, and curious about how I could use them to solve larger problems. </p>
-             <p> As a Senior OWL at Lindsay Wildlife Experience and a 2-year member of Gael Force robotics, I have skills as a team leader and team member. At LWE, I supervise a group of younger volunteers in performing husbandry tasks, presentations, and data collection for wild animals. I communicate project ideas regarding conservation issues to staff members and museum visitors on a weekly basis. As a member of 5327S, I assist my captain with building and contribute ideas and time as a team member to be successful. I ensure that I am fulfilling my role and helping other team members as well. In my own time, I have also been working on projects focused on collecting data, especially related to the environment and life sciences.</p>
+                     <p> Currently, I am taking courses that have explored engineering from an exploration and specialization perspective. My first two courses, Intro to Engineering Design and Principles of Engineering were interdisciplinary courses that looked at several different areas, from mechanical to electrical engineering. In junior year, I completed the specialization course, Digital Electronics, where I studied digital systems and logic. I also took  computer science courses in my free time to expand my skill set and figure out my area of interest.  </p>
+             <p> As a Senior OWL at Lindsay Wildlife Experience and a 2-year member of Gael Force robotics, I have skills as a team leader and team member. At LWE, I supervise a group of younger volunteers in performing husbandry tasks, presentations, and data collection for wild animals. Last spring, I also become a part of the Pulsar Search Collaboratory (PSC), and I'm currently participating in the Advanced Timing Research team, where we are observing the timing of the Crab Pulsar using Jupyter Notebooks, PINT, and radio telescope data. 
+               As a member of 5327S Robotics team, I assist my captain with building and contribute ideas and time as a team member to be successful. I ensure that I am fulfilling my role and helping other team members as well. In my own time, I have also been working on projects that use AI to investigate issues related to the environment and life sciences.</p>
 
 
 
