Updated field trips!

--- a/workexperience.html
+++ b/workexperience.html
@@ -62,7 +62,7 @@
     <div class="container px-5 px-lg-5">
       <main>
         <article>
-          <p><a href="https://drive.google.com/file/d/1ji_32LSs3VrGLzcOlUazfSpa0PmWSWZ2/view?usp=sharing"
+          <p><a href="https://drive.google.com/file/d/1Qkc3CG6bCq6UuQkcWqaEYZxTUlUyjKcv/view?usp=sharings"
               target=”_blank”>Click Here for My Resume</a></p>
           <p article="heading"> During my time in the engineering program, I have met a number of industry professionals
             through workplace field trips and guest speakers. They have offered great insight about STEM careers
@@ -206,7 +206,16 @@
             <h2>Field Trips</h2>
           </center>
           <h4>University of the Pacific - 3/27/24</h4>
-          <p> </p>
+          <p> My final field trip in the Engineering Academy was to the University of the Pacific in Stockton. We toured
+            the campus and had the opportunity to view highlights on the campus, such as the dining hall, business
+            building, and computer science lab. The campus was much smaller than most public schools, but it still had a
+            lot to offer in terms of job opportunities. For example, they have a co-ed program for engineering and
+            computer science majors, which is a great way to get into the field, and it starts from their freshman year.
+            Additionally, due to the smaller campus size, they also have a lot of scholarship and work abroad programs,
+            which was very unique. After touring UOP, we stopped at Las Positas Community College to tour the campus and
+            discuss the TAG (Transfer Guarentee Program) that is a very practical way of getting into a UC, all while
+            saving money. Overall, this trip was an informative way to wrap up my experience, especially as I'm hearing
+            back from colleges and planning my future in the next few months. </p>
           <h4>Lawrence Livermore Labs (NIF Tour) - 2023 </h4>
           <p> The in-person Livermore Labs field trip was a fantastic experience to witness an incredibly important
             piece of technology and the people behind it, as well as what it’s like working in research. In the actual
